front - vertical align fix

--- a/client/main.css
+++ b/client/main.css
@@ -1,9 +1,46 @@
 /* CSS declarations go here */
 
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Patrick+Hand+SC');
 
-body {
+html, body {
     font-family: 'Roboto', sans-serif;
+    height: 100%!important;
+    background-image: url('/polygon_bg.jpg');
+    background-repeat: no-repeat;
+    background-position-x: center;
+}
+
+#title {
+    font-family: 'Patrick Hand SC', cursive;
+    color: white!important;
+    text-shadow: -1.25px 0 black, 0 1.25px black, 1.25px 0 black, 0 -1.25px black;
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
+.description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+}
+
+#flex {
+    align-items: center;
+    background-color: transparent!important;
+    display: flex;
+    justify-content: center;
+    padding-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 992px) {
+    #flex {
+        padding-top: 4rem;
+        margin-bottom: 4rem;
+    }
 }
 
 .list-group-item {
@@ -16,14 +53,14 @@ body {
 }
 
 .emoji {
-  font-size: inherit;
-  height: 2.7ex;
-  width: auto;
-  min-width: 15px;
-  min-height: 15px;
+    font-size: inherit;
+    height: 2.7ex;
+    width: auto;
+    min-width: 15px;
+    min-height: 15px;
 
-  display: inline-block;
-  margin: -0.4ex .15em 0;
-  line-height: normal;
-  vertical-align: top;
+    display: inline-block;
+    margin: -0.4ex .15em 0;
+    line-height: normal;
+    vertical-align: top;
 }
